--- a/src/app/auth/dashboard/dashboard.component.html
+++ b/src/app/auth/dashboard/dashboard.component.html
@@ -3,68 +3,70 @@
   <div class="row">
     <div class="col-xs-12 col-sm-3 search-section">
       <div>
-            <h3>Filter your content by hashtag</h3>
-            <tag-input [ngModel]="[]"
-                       [theme]="'dark'"
-                       [onlyFromAutocomplete]=true
-                       [addOnBlur]="true"
-                       [clearOnBlur]="true"
-                       (onAdd)="onItemAdded($event)"
-                       (onRemove)="onItemRemoved($event)">
+        <h4>Filter your content by hashtag</h4>
+        <div class="tag-input-wrapper">
+          <tag-input [ngModel]="[]"
+          [theme]="'dark'"
+          [onlyFromAutocomplete]=true
+          [addOnBlur]="true"
+          [clearOnBlur]="true"
+          (onAdd)="onItemAdded($event)"
+          (onRemove)="onItemRemoved($event)">
 
-                <tag-input-dropdown [autocompleteItems]="autocompleteItems">
-                </tag-input-dropdown>
-            </tag-input>
-        </div>
-     <br />
-      <h4>manage your search history searches:</h4>
-      <div class="search-tags" *ngFor="let search of searches; let i=index">
-        <a (click)="searchThis(search)">#{{search}} </a> <span (click)="removeTag(search)" class="glyphicon glyphicon-remove"></span>
-      </div><!-- search-tags -->
-    </div><!-- search-section -->
-    <div class="col-xs-12 col-sm-8 content">
+          <tag-input-dropdown [autocompleteItems]="autocompleteItems">
+          </tag-input-dropdown>
+        </tag-input>
+      </div>
+    </div>
+    <br />
+    <h4>Manage your search history:</h4>
+    <div class="search-tags" *ngFor="let search of searches; let i=index">
+      <a (click)="searchThis(search)">#{{search}} </a> <span (click)="removeTag(search)" class="glyphicon glyphicon-remove"></span>
+    </div><!-- search-tags -->
+  </div><!-- search-section -->
+  <div class="col-xs-12 col-sm-8 content">
 
-      <div class="content-wrapper" *ngIf="favorites.length>0">
-        <div *ngFor="let favorite of favoritesData | content:filtered; let i = index">
-          <div class="youtube-dash">
-            <div class="yt-wrapper" *ngIf="favorite.content.source == 'YOUTUBE'">
-              <app-youtube [video]=favorite.content.data.video [showButtons]=false></app-youtube>
-              <a class="remove-yt" (click)="remove(favorite.content._id, i)"><span  class="glyphicon glyphicon-remove"></span></a>
-            </div><!-- yt-wrapper -->
-          </div><!-- youtube-dash -->
-          <div class="twitter-dash">
-            <div class="tweet-wrapper" *ngIf="favorite.content.source == 'TWITTER'">
-              <app-tweet [tweet]=favorite.content.data.tweet [showButtons]=false></app-tweet>
-              <a class="remove-tw"(click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
-            </div><!-- tweet-wrapper -->
-          </div><!-- twitter-dash -->
-          <div class="reddit-dash">
-            <div class="reddit-wrapper" *ngIf="favorite.content.source == 'REDDIT'">
-              <app-reddit [reddit]=favorite.content.data.reddit [showButtons]=false ></app-reddit>
-              <a class="remove-re"(click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
-            </div><!-- reddit-wrapper -->
-          </div><!-- reddit-dash -->
-          <div class="tumblr-dash">
-            <div class="tumblr-wrapper" *ngIf="favorite.content.source == 'TUMBLR'">
-              <app-tumblr [tumblr]=favorite.content.data.tumblr [showButtons]=false></app-tumblr>
-              <a class="remove-tu"(click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
-            </div><!-- tumblr-wrapper -->
-          </div><!-- tumblr-dash -->
-        </div><!-- *ngFor -->
-      </div><!-- content-wrapper *ngIf -->
-    </div><!-- content -->
-    <div class="col-xs-12 col-sm-3 right-side">
+    <div class="content-wrapper" *ngIf="favorites.length>0">
+      <div *ngFor="let favorite of favoritesData | content:filtered; let i = index">
+        <div class="youtube-dash">
+          <div class="yt-wrapper" *ngIf="favorite.content.source == 'YOUTUBE'">
+            <app-youtube [video]=favorite.content.data.video [showButtons]=false></app-youtube>
+            <a class="remove-yt" (click)="remove(favorite.content._id, i)"><span  class="glyphicon glyphicon-remove"></span></a>
+          </div><!-- yt-wrapper -->
+        </div><!-- youtube-dash -->
+        <div class="twitter-dash">
+          <div class="tweet-wrapper" *ngIf="favorite.content.source == 'TWITTER'">
+            <app-tweet [tweet]=favorite.content.data.tweet [showButtons]=false></app-tweet>
+            <a class="remove-tw"(click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
+          </div><!-- tweet-wrapper -->
+        </div><!-- twitter-dash -->
+        <div class="reddit-dash">
+          <div class="reddit-wrapper" *ngIf="favorite.content.source == 'REDDIT'">
+            <app-reddit [reddit]=favorite.content.data.reddit [showButtons]=false ></app-reddit>
+            <a class="remove-re"(click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
+          </div><!-- reddit-wrapper -->
+        </div><!-- reddit-dash -->
+        <div class="tumblr-dash">
+          <div class="tumblr-wrapper" *ngIf="favorite.content.source == 'TUMBLR'">
+            <app-tumblr [tumblr]=favorite.content.data.tumblr [showButtons]=false></app-tumblr>
+            <a class="remove-tu"(click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
+          </div><!-- tumblr-wrapper -->
+        </div><!-- tumblr-dash -->
+      </div><!-- *ngFor -->
+    </div><!-- content-wrapper *ngIf -->
+  </div><!-- content -->
+  <div class="col-xs-12 col-sm-3 right-side">
 
-        <button *ngIf="visible" class="delete-button" (click)="delete()">delete profile</button>
-        <div *ngIf="!visible">
-          <p>
-            CONFIRM DELETE
-          </p>
-          <button (click)="yes()">YES</button><button (click)="no()">NO</button>
-        </div>
+    <button *ngIf="visible" class="delete-button" (click)="delete()">delete profile</button>
+    <div *ngIf="!visible">
+      <h4>
+        Do you really want to delete your profile?
+      </h4>
+      <button class="yes-delete-btn"(click)="yes()">YES</button><button class="no-delete-btn" (click)="no()">NO</button>
+    </div>
 
 
 
-    </div><!-- right-side -->
-  </div><!-- row -->
+  </div><!-- right-side -->
+</div><!-- row -->
 </div><!-- container-fluid -->
