minor refactoring, getting rid of console logs around the place

--- a/src/app/reddit/reddit.component.css
+++ b/src/app/reddit/reddit.component.css
@@ -11,6 +11,10 @@
   width: 30px;
   height: 30px;
 }
+.icon:hover{
+  cursor: pointer;
+}
+
 .reddit-info-wrapper {
   display: flex;
   align-items: center;
