--- a/src/app/auth/dashboard/dashboard.component.html
+++ b/src/app/auth/dashboard/dashboard.component.html
@@ -3,28 +3,23 @@
   <div class="row">
     <div class="col-xs-12 col-sm-3 search-section">
       <div>
-            <h3>Filter your content by hashtag</h3>
-            <tag-input [ngModel]="[]"
-                       [theme]="'dark'"
-                       [onlyFromAutocomplete]=true
-                       [addOnBlur]="true"
-                       [clearOnBlur]="true"
-                       (onAdd)="onItemAdded($event)"
-                       (onRemove)="onItemRemoved($event)"
-                       >
+        <h3>Filter your content by hashtag</h3>
+        <tag-input [ngModel]="[]" [theme]="'dark'" [onlyFromAutocomplete]=true [addOnBlur]="true" [clearOnBlur]="true" (onAdd)="onItemAdded($event)" (onRemove)="onItemRemoved($event)">
 
-                <tag-input-dropdown [autocompleteItems]="autocompleteItems">
-                </tag-input-dropdown>
-            </tag-input>
-        </div>
-     <br />
+          <tag-input-dropdown [autocompleteItems]="autocompleteItems">
+          </tag-input-dropdown>
+        </tag-input>
+      </div>
+      <br />
       <h4>manage your search history searches:</h4>
       <div class="search-tags" *ngFor="let search of searches; let i=index">
 
-          #{{search}}
+        #{{search}}
         <span (click)="removeTag(search)" class="glyphicon glyphicon-remove remove"></span>
-      </div><!-- search-tags -->
-    </div><!-- search-section -->
+      </div>
+      <!-- search-tags -->
+    </div>
+    <!-- search-section -->
     <div class="col-xs-12 col-sm-8 content">
 
       <div class="content-wrapper" *ngIf="favorites.length>0">
@@ -32,45 +27,56 @@
           <div class="youtube-dash">
             <div class="yt-wrapper" *ngIf="favorite.content.source == 'YOUTUBE'">
               <app-youtube [video]=favorite.content.data.video [showButtons]=false></app-youtube>
-              <a class="remove-yt remove" (click)="remove(favorite.content._id, i)"><span  class="glyphicon glyphicon-remove"></span></a>
-            </div><!-- yt-wrapper -->
-          </div><!-- youtube-dash -->
+              <a class="remove-yt remove" (click)="remove(favorite.content._id, i)"> <span  class="glyphicon glyphicon-remove"></span></a>
+            </div>
+            <!-- yt-wrapper -->
+          </div>
+          <!-- youtube-dash -->
           <div class="twitter-dash">
             <div class="tweet-wrapper" *ngIf="favorite.content.source == 'TWITTER'">
               <app-tweet [tweet]=favorite.content.data.tweet [showButtons]=false></app-tweet>
-              <a class="remove-tw remove"(click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
-            </div><!-- tweet-wrapper -->
-          </div><!-- twitter-dash -->
+              <a class="remove-tw remove" (click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
+            </div>
+            <!-- tweet-wrapper -->
+          </div>
+          <!-- twitter-dash -->
           <div class="reddit-dash">
             <div class="reddit-wrapper" *ngIf="favorite.content.source == 'REDDIT'">
-              <app-reddit [reddit]=favorite.content.data.reddit [showButtons]=false ></app-reddit>
-              <a class="remove-re remove"(click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
-            </div><!-- reddit-wrapper -->
-          </div><!-- reddit-dash -->
+              <app-reddit [reddit]=favorite.content.data.reddit [showButtons]=false></app-reddit>
+              <a class="remove-re remove" (click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
+            </div>
+            <!-- reddit-wrapper -->
+          </div>
+          <!-- reddit-dash -->
           <div class="tumblr-dash">
             <div class="tumblr-wrapper" *ngIf="favorite.content.source == 'TUMBLR'">
               <app-tumblr [tumblr]=favorite.content.data.tumblr [showButtons]=false></app-tumblr>
-              <a class="remove-tu remove"(click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
-            </div><!-- tumblr-wrapper -->
-          </div><!-- tumblr-dash -->
-        </div><!-- *ngFor -->
-      </div><!-- content-wrapper *ngIf -->
-    </div><!-- content -->
+              <a class="remove-tu remove" (click)="remove(favorite.content._id, i)"><span class="glyphicon glyphicon-remove"></span></a>
+            </div>
+            <!-- tumblr-wrapper -->
+          </div>
+          <!-- tumblr-dash -->
+        </div>
+        <!-- *ngFor -->
+      </div>
+      <!-- content-wrapper *ngIf -->
+    </div>
+    <!-- content -->
     <div class="col-xs-12 col-sm-3 right-side">
 
-        <button *ngIf="visible" class="delete-button" (click)="delete()">delete profile</button>
-        <div *ngIf="!visible" class="confirm">
-          <p>
-            CONFIRM DELETE
-          </p>
-          <div>
-              <button class="delete-button" (click)="yes()">YES</button><button class="delete-button" (click)="no()">NO</button>
-          </div>
-
+      <button *ngIf="visible" class="delete-button" (click)="delete()">delete profile</button>
+      <div *ngIf="!visible" class="confirm">
+        <p>
+          CONFIRM DELETE
+        </p>
+        <div>
+          <button class="delete-button" (click)="yes()">YES</button><button class="delete-button" (click)="no()">NO</button>
         </div>
 
-
-
-    </div><!-- right-side -->
-  </div><!-- row -->
-</div><!-- container-fluid -->
+      </div>
+    </div>
+    <!-- right-side -->
+  </div>
+  <!-- row -->
+</div>
+<!-- container-fluid -->
