--- a/src/app/tweet/tweet.component.css
+++ b/src/app/tweet/tweet.component.css
@@ -7,6 +7,10 @@
   width: 30px;
   height: 30px;
 }
+.icon:hover{
+  cursor: pointer;
+}
+
 /*left side -- profile pic START*/
 .left-profile-pic{
   padding-right: 10px;
