--- a/src/app/auth/dashboard/dashboard.component.css
+++ b/src/app/auth/dashboard/dashboard.component.css
@@ -21,6 +21,11 @@
   text-align: center;
 }
 
+.tags {
+  display: flex;
+  flex-flow: wrap;
+}
+
 .search-tags{
   padding:3px;
   background-color: rgba(28, 40, 51, 1);
