--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,11 +7,11 @@
 	    <form>
 	      <div class="form-group">
 	        <label class="label-username" for="InputUsername">username</label>
-	        <input type="email" class="form-control" id="InputUsername" placeholder="username" [(ngModel)]="user.username" name="username">
+	        <input type="email" required class="form-control" id="InputUsername" placeholder="username" [(ngModel)]="user.username" name="username">
 	      </div>
 	      <div class="form-group">
 	        <label class="label-password" for="InputPassword">Password</label>
-	        <input type="password" class="form-control" id="InputPassword" placeholder="Password" [(ngModel)]="user.password" name="password">
+	        <input type="password" required class="form-control" id="InputPassword" placeholder="Password" [(ngModel)]="user.password" name="password">
 	      </div>
 	      <button type="submit" class="btn btn-login btn-default btn-primary" (click)="login()">Login</button>
 	    </form>
