--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -7,11 +7,11 @@
               <form>
       	      <div class="form-group">
       	        <label class="label-username" for="InputUsername">Username</label>
-      	        <input type="text" class="form-control"  id="InputUsername" placeholder="Username" [(ngModel)]="newUser.username" name="username">
+      	        <input type="text" required class="form-control"  id="InputUsername" placeholder="Username" [(ngModel)]="newUser.username" name="username">
       	      </div>
       	      <div class="form-group">
       	        <label class="label-password" for="InputPassword">Password</label>
-      	        <input type="password" class="form-control" id="InputPassword" placeholder="Password" [(ngModel)]="newUser.password" name="password">
+      	        <input type="password" required class="form-control" id="InputPassword" placeholder="Password" [(ngModel)]="newUser.password" name="password">
       	      </div>
       	      <button type="submit" class="btn btn-signin btn-default btn-primary" (click)="signup()">Create Account</button>
       	    </form>
